--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,18 +3,12 @@ server:
 spring:
   application:
     name: config-server
+  profiles:
+    active: jdbc
   security:
     user:
       name: AKIAPYRXF3VSENILA42Q
       password: e3iNcgZ+nuVjnfzHQq2HHxoZd3VySliXyG6vFruP
-  profiles:
-    active: native
-  cloud:
-    config:
-      server:
-        native:
-          search-locations: classpath:/config
-################### 注册中心
 eureka:
   instance:
     prefer-ip-address: true
